blue-green-rollout/blue-green-rollout.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-active
spec:
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: api-service-preview
spec:
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-rollout
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:latest
          args:
            # text arg will be displayed in the API response
            - "-text=Blue Version v1.0"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: api-service-active
      previewService: api-service-preview
      autoPromotionEnabled: false # automatic promotion after success (pods are running and healthy (passing readiness probes)
      scaleDownDelaySeconds: 30 # controls how long the old version stays running after promotion
